--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1,5 +1,40 @@
 @charset "UTF-8";
-@import "~node_modules/modern-normalize/modern-normalize.css";
+@import "~node_modules/modern-normalize/modern-normalize.css"; /* Стили для обнуления верхних отступов у элементов */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+/* Класс для обнуления базовых свойств у списков (ul) */
+.list {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+}
+
+/* Класс для обнуления базовых свойств у ссылок */
+.link {
+  text-decoration: none;
+  color: inherit;
+}
+
+/* Свойства для корректного отображения картинок */
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+/* Свойства для обнуления курсива у address */
+address {
+  font-style: normal;
+}
+
 :root {
   --secondary-light: #e0e0e0;
   --primary-dark: #111111;
@@ -15,6 +50,13 @@
   --gradient: linear-gradient(158deg, rgba(204, 236, 231, 0.6812850140056023) 0%, rgba(79, 46, 232, 1) 100%);
   --cubic: linear;
   --time: 300ms;
+  --mobile-menu-bg: radial-gradient(183.6% 183.01% at 59.76% -23.42%, #4f2ee8 18.03%, #fff 100%);
+  --switcher-bg-light: linear-gradient(180deg, #4f2ee8 0%, #dcdcdc 100%);
+  --switcher-bg-dark: linear-gradient(180deg, #4f2ee8 0%, #686868 100%);
+  --switcher-status: linear-gradient(180deg, #ffffff 0%, #f7f7f7 100%);
+  --switcher-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.1);
+  --switcher-status-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1),
+  	0px 2px 2px rgba(0, 0, 0, 0.1), 1px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 body {
@@ -23,6 +65,27 @@ body {
   line-height: 1.2857142857;
   color: var(--primary-dark);
   background-color: var(--bg-light);
+}
+
+.section-categories-suppot-thumb {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin: 0 0 40px;
+}
+@media screen and (min-width: 768px) {
+  .section-categories-suppot-thumb {
+    flex-direction: row;
+    gap: 32px;
+    margin: 0 0 100px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .section-categories-suppot-thumb {
+    flex-direction: column;
+    gap: 86px;
+    margin: 0;
+  }
 }
 
 .container {
@@ -60,42 +123,6 @@ body {
   margin: -1px;
 }
 
-/* Стили для обнуления верхних отступов у элементов */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin: 0;
-}
-
-/* Класс для обнуления базовых свойств у списков (ul) */
-.list {
-  list-style: none;
-  padding-left: 0;
-  margin: 0;
-}
-
-/* Класс для обнуления базовых свойств у ссылок */
-.link {
-  text-decoration: none;
-  color: inherit;
-}
-
-/* Свойства для корректного отображения картинок */
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-/* Свойства для обнуления курсива у address */
-address {
-  font-style: normal;
-}
-
 @font-face {
   font-family: "DM Sans";
   font-weight: 400;
@@ -125,14 +152,25 @@ address {
   src: url("./../fonts/DM-Sans-Italic/DM-Sans-Italic.eot?iefix") format("embedded-opentype"), url("./../fonts/DM-Sans-Italic/DM-Sans-Italic.woff2") format("woff2"), url("./../fonts/DM-Sans-Italic/DM-Sans-Italic.woff") format("woff"), url("./../fonts/DM-Sans-Italic/DM-Sans-Italic.ttf") format("truetype"), url("./../fonts/DM-Sans-Italic/DM-Sans-Italic.svg#DMSans-Italic") format("svg"); /* iOS 4.1- */
 }
 .section-categories {
+  height: 352px;
+}
+
+.page-nav__link.section-categories {
   width: 356px;
   max-height: 472px;
   overflow-x: hidden;
   overflow-y: auto;
 }
+@media screen and (min-width: 768px) {
+  .page-nav__link.section-categories {
+    height: 472px;
+    width: 335px;
+  }
+}
 
 .list-categories {
   list-style: none;
+  padding: 0;
 }
 
 .category__item {
@@ -229,10 +267,15 @@ address {
 }
 
 .top-books-list {
+  list-style: none;
   display: flex;
   flex-direction: column;
   gap: 40px;
   margin-top: 40px;
+}
+
+.top-books__item {
+  list-style: none;
 }
 
 .top-books-title {
@@ -260,6 +303,7 @@ address {
 .top-books-categories__list {
   display: flex;
   flex-direction: column;
+  padding: initial;
   margin-bottom: 8px;
 }
 @media screen and (min-width: 768px) {
@@ -298,6 +342,554 @@ address {
 .top-books__button:hover,
 .top-books__button :focus {
   background-color: #4F2EE8;
+  color: #FFFFFF;
+}
+.dark-theme .top-books__button {
+  background-color: #202024;
+  color: #FFFFFF;
+}
+
+:root {
+  --main-text-color: rgba(17, 17, 17, 0.6);
+}
+
+/* crollbar settings */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 114px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  display: none;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #E0E0E0;
+  border-radius: 12px;
+}
+
+/* Handle on hover */
+/* support-menu */
+.support-menu {
+  position: relative;
+  height: 352px;
+  padding: 20px 40px 0;
+  background: radial-gradient(183.6% 183.01% at 59.76% -23.42%, #4F2EE8 18.03%, #FFFFFF 100%);
+  box-shadow: 0px 10px 10px rgba(245, 245, 247, 0.1);
+  border-radius: 16px;
+  color: #FFFFFF;
+}
+
+.support-menu__tittle {
+  margin-bottom: 40px;
+  text-align: center;
+  /* text */
+  color: #FFFFFF;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.14;
+  /* identical to box height, or 114% */
+  letter-spacing: -0.04em;
+}
+
+.support-menu__list {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  list-style: none;
+  padding: 0;
+  /* gap: 20px; */
+  /* height: 50px; */
+}
+
+.support-menu__item {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.support-menu__item img {
+  filter: invert(100%) sepia(0%) saturate(2%) hue-rotate(76deg) brightness(107%) contrast(101%);
+}
+
+/* swiper settings */
+.support-menu__swiper {
+  width: 100%;
+  height: 200px;
+  /* margin-bottom: 68px; */
+  overflow: hidden;
+}
+
+.support-menu__swiperbutton {
+  display: flex;
+  height: 32px;
+  width: 32px;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  /* transform: translate(-50%); */
+  z-index: 1;
+  background-color: #FFFFFF;
+  border-radius: 50%;
+  transform: translateX(-50%);
+  transition: transform 250ms ease-in-out;
+}
+
+.support-menu__disabled {
+  /* display: none; */
+  /* background-color: black; */
+  transform: rotate(180deg) translateX(50%);
+}
+
+.support-menu__title-thumb {
+  display: flex;
+  gap: 12px;
+}
+
+/* media */
+@media screen and (min-width: 768px) {
+  .support-menu {
+    width: 100%;
+    height: 472px;
+  }
+  .support-menu__swiper {
+    height: 320px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .support-menu {
+    /* width: 356px; */
+    height: 490px;
+  }
+}
+.page-header {
+  position: sticky;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  padding-top: 17px;
+  padding-bottom: 17px;
+  background-color: var(--primary-light);
+  border: 1.5px solid var(--logo-dark);
+  border-radius: 0px 0px 8px 8px;
+}
+
+.page-header__container {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+@media screen and (min-width: 768px) {
+  .logo {
+    margin-right: 40px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .logo {
+    margin-right: 76px;
+  }
+}
+
+.switcher-theme {
+  position: relative;
+  display: block;
+  margin-left: auto;
+  margin-right: 14px;
+  padding: 1px;
+  width: 40px;
+  height: 20px;
+  background-image: var(--switcher-bg-light);
+  border-radius: 20px;
+  box-shadow: var(--switcher-shadow);
+  overflow: hidden;
+  cursor: pointer;
+}
+.switcher-theme::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-image: var(--switcher-bg-dark);
+  opacity: 0;
+  transition: opacity var(--time) var(--cubic);
+}
+@media screen and (min-width: 768px) {
+  .switcher-theme {
+    margin-right: 24px;
+  }
+}
+
+html.dark .switcher-theme::before {
+  opacity: 1;
+}
+
+html.dark .switcher-theme__status {
+  transform: translateX(20px);
+}
+
+.switcher-theme__status {
+  display: block;
+  width: 18px;
+  height: 18px;
+  background-image: var(--switcher-status);
+  border-radius: 50%;
+  box-shadow: var(--switcher-status-shadow);
+  transform: translateX(0);
+  transition: transform var(--time) var(--cubic);
+}
+
+.page-header__btn-container {
+  position: relative;
+}
+
+.menu-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  color: var(--primary-dark);
+  background-color: transparent;
+  border: none;
+  opacity: 1;
+  pointer-events: visible;
+  visibility: visible;
+  transition: all var(--time) var(--cubic);
+  cursor: pointer;
+}
+.menu-btn:hover {
+  color: var(--primary-akzent);
+}
+@media screen and (min-width: 768px) {
+  .menu-btn {
+    display: none;
+  }
+}
+.menu-btn--close {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.menu-btn--hide {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.menu-btn__icon {
+  fill: currentColor;
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  padding-top: 104px;
+  padding-bottom: 20px;
+  width: 100vw;
+  height: calc(var(--vh, 1vh) * 100);
+  background-image: var(--mobile-menu-bg);
+  visibility: hidden;
+  transform: translateY(-100%);
+  transition: visibility var(--time), transform var(--time) var(--cubic);
+  overflow: hidden;
+}
+.menu-container--is-open {
+  visibility: visible;
+  transform: translateY(0);
+}
+.menu-container::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: bottom;
+  background-image: url("../images/mobile-menu/bg-img.png");
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .menu-container::after {
+    background-image: url("../images/mobile-menu/bg-img@2x.png");
+  }
+}
+@media screen and (min-width: 376px) {
+  .menu-container::after {
+    top: 443px;
+    background-image: url("../images/mobile-menu/bg-img@3x.png");
+    background-size: cover;
+    background-position: unset;
+  }
+}
+@media screen and (min-width: 376px) and (min-device-pixel-ratio: 2), screen and (min-width: 376px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 376px) and (min-resolution: 192dpi), screen and (min-width: 376px) and (min-resolution: 2dppx) {
+  .menu-container::after {
+    background-image: url("../images/mobile-menu/bg-img@4x.png");
+  }
+}
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: none;
+  }
+}
+
+.menu-container__container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
+.menu-container__container--is-hide {
+  display: none;
+}
+
+.page-header__user-container {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .page-header__user-container {
+    position: relative;
+  }
+}
+
+.user {
+  position: absolute;
+  top: -20px;
+  left: 20px;
+  display: none;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .user {
+    position: relative;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    padding: 4px 12px;
+    background-color: var(--primary-akzent);
+    border: none;
+    border-radius: 36px;
+    cursor: pointer;
+  }
+}
+
+.user__box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 9px;
+  width: 37px;
+  height: 37px;
+  background-color: var(--user-bg);
+  border-radius: 50%;
+}
+
+.user__name {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 1.32;
+  letter-spacing: -0.02em;
+}
+@media screen and (min-width: 768px) {
+  .user__name {
+    margin-right: 4px;
+  }
+}
+
+.user__icon {
+  transform: rotate(0);
+  transition: transform var(--time) var(--cubic);
+}
+
+.user--is-active-btns-box .user__icon {
+  transform: rotate(180deg);
+}
+
+.page-nav {
+  display: none;
+  margin-top: 143px;
+  margin-bottom: auto;
+}
+@media screen and (min-width: 768px) {
+  .page-nav {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+}
+
+.page-header__page-nav {
+  display: none;
+}
+
+.page-nav__list {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+@media screen and (min-width: 768px) {
+  .page-nav__list {
+    flex-direction: row;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .page-nav__list {
+    gap: 16px;
+  }
+}
+
+.page-nav__link {
+  display: inline-flex;
+  align-items: center;
+  gap: 4px;
+  padding: 8px 16px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.04em;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: var(--primary-light);
+  border-radius: 36px;
+}
+@media screen and (min-width: 768px) {
+  .page-nav__link {
+    color: var(--primary-color);
+  }
+}
+.page-nav__link--current {
+  font-weight: 700;
+  transform: translateX(16px);
+}
+@media screen and (min-width: 768px) {
+  .page-nav__link--current {
+    transform: translateX(0);
+  }
+}
+
+.page-nav__icon {
+  fill: currentColor;
+}
+
+@media screen and (min-width: 768px) {
+  .page-header__btns-box {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    height: 80px;
+    overflow: hidden;
+  }
+}
+
+.log-out-btn {
+  display: none;
+  gap: 4px;
+  min-width: 118px;
+  color: var(--primary-light);
+  background-color: var(--primary-light);
+}
+@media screen and (min-width: 768px) {
+  .log-out-btn {
+    width: 100%;
+    transform: translateY(-101%);
+    visibility: hidden;
+    transition: visibility var(--time), transform var(--time) var(--cubic);
+  }
+}
+
+.user--is-active-btns-box + .page-header__btns-box .log-out-btn {
+  transform: translateY(30px);
+  visibility: visible;
+}
+
+.sign-up-btn {
+  display: flex;
+  justify-content: space-between;
+  max-width: 184px;
+  width: 100%;
+  color: var(--primary-light);
+  background-color: var(--primary-akzent);
+}
+
+.sign-up-btn__page-header {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .sign-up-btn__page-header {
+    display: flex;
+  }
+}
+
+.header-btn {
+  align-self: flex-start;
+  align-items: center;
+  padding: 14px 24px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.04em;
+  border: 1.5px solid var(--primary-light);
+  border-radius: 18px;
+  cursor: pointer;
+}
+.header-btn::after {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 20px;
+  background-image: url("../images/icon-arrow-btn.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.is-logged .menu-container__page-nav {
+  display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .is-logged .page-header__page-nav {
+    display: block;
+  }
+}
+
+.is-logged .user {
+  display: flex;
+}
+
+@media screen and (min-width: 768px) {
+  .is-logged .page-header__user-container {
+    display: block;
+  }
+}
+
+.is-logged .sign-up-btn {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .is-logged .sign-up-btn__page-header {
+    display: none;
+  }
+}
+
+.is-logged .log-out-btn {
+  display: inline-flex;
 }
 
 .shopping-list {
@@ -935,11 +1527,55 @@ address {
   pointer-events: none;
 }
 
+.scrollBtn {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  bottom: 140px;
+  right: 20px;
+  z-index: 999;
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  border: none;
+  fill: var(--primary-light);
+  background: rgba(79, 46, 232, 0.3);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.scrollBtn:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 54px;
+  height: 54px;
+  border-radius: 50%;
+  border: none;
+  background-color: var(--primary-akzent);
+  transition: background-color 0.3s ease;
+}
+
+.scrollBtn:hover:before {
+  background-color: var(--secondary-light);
+}
+
+.scroll__icon {
+  fill: var(--primary-light);
+  z-index: 998;
+}
+
 .section-categories {
   width: 356px;
   max-height: 472px;
   overflow-x: hidden;
   overflow-y: auto;
+}
+
+.list-categories {
+  list-style: none;
 }
 
 .category__item {
@@ -988,6 +1624,7 @@ address {
 }
 
 .category-books__item {
+  list-style: none;
   width: 100%;
   margin-bottom: 40px;
 }
@@ -1052,6 +1689,10 @@ address {
   text-transform: uppercase;
 }
 
+.category-books__link {
+  text-decoration: none;
+}
+
 .category-books__link:hover .card-overlay {
   transform: translateY(0);
   opacity: 1;
@@ -1066,6 +1707,7 @@ address {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  color: var(--primary-dark);
 }
 .dark-theme .category-books__title {
   color: #FFFFFF;
