--- a/src/partials/HomePage/scroll.html
+++ b/src/partials/HomePage/scroll.html
@@ -1,1 +1,1 @@
-<button class="scrollBtn" hidden> <svg class="scroll__icon" width="24" height="24"><use href="/src/images/icons.svg#icon-back-button-angle"></use> </svg> </button>
+<button class="scrollBtn" hidden> <svg class="scroll__icon" width="24" height="24"><use href="./images/icons.svg#icon-back-button-angle"></use> </svg> </button>
