--- a/src/partials/HomePage/popUp.html
+++ b/src/partials/HomePage/popUp.html
@@ -1,8 +1,9 @@
 <div class="book-modal" data-modal>
-  <button type="button" class="modal-close" data-modal-close>x</button>
+  <button type="button" class="modal-close" data-modal-close>
+    <svg class="modal-close-icon" width="28" height="28">
+      <use href="/src/images/svg/x-close.svg#icon-x-close"></use>
+    </svg>
+  </button>
   <div class="book-info"></div>
   <button type="button" class="button-book-more"></button>
 </div>
-
-
-
