--- a/src/sass/base/main-page/_pop-up.scss
+++ b/src/sass/base/main-page/_pop-up.scss
@@ -65,6 +65,12 @@ right: 31px;
 width: 12px;
 height: 12px;
 
+&:focus &:hover {
+  cursor: pointer;
+  color: #4F2EE8;
+  transition: 250ms color;
+}
+
 @media screen and (min-width: 768px) {
 width: 28px;
   height: 28px;
@@ -188,4 +194,12 @@ font-family: 'DM Sans';
       text-transform: uppercase;
     
       color: #111111;
+
+          // &:hover &:focus
+          //  {
+          //     cursor: pointer;
+          //     background-color: #4F2EE8;
+          //     color: #ffffff;
+          //     transition: background-color 250ms color;
+          //   }
 }
