--- a/src/partials/HomePage/popUp.html
+++ b/src/partials/HomePage/popUp.html
@@ -1,7 +1,7 @@
 <div class="book-modal" data-modal>
   <button type="button" class="modal-close" data-modal-close>
-    <svg class="modal-close-icon" width="28" height="28">
-      <use href="/src/images/svg/x-close.svg#icon-x-close"></use>
+    <svg class="modal-close-icon" width="32" height="32">
+      <use href="/src/images/svg/close-test.svg#icon-close-modal-test"></use>
     </svg>
   </button>
   <div class="book-info"></div>
