--- a/src/sass/components/_back-to-top-button.scss
+++ b/src/sass/components/_back-to-top-button.scss
@@ -1,24 +1,22 @@
 .scrollBtn {
   position: fixed;
-  display: none;
+  display: flex;
   align-items: center;
   justify-content: center;
-  bottom: 140px;
+  bottom: 50px;
   right: 20px;
   z-index: 999;
   width: 64px;
   height: 64px;
   border-radius: 50%;
   border: none;
-  fill: var(--primary-light);
   background: rgba(79, 46, 232, 0.3);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
+  opacity: 0;
+      transition: opacity 0.4s var(--cubic);
 
-.scrollBtn:before {
+  &:before {
   content: '';
   position: absolute;
-
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -27,20 +25,29 @@
   border-radius: 50%;
   border: none;
 
-  background-color: var(--primary-akzent);
-  transition: background-color 0.3s ease;
+  background: var(--primary-akzent);
+  transition: background var(--time) var(--cubic);
 }
 
-.scrollBtn:hover:before {
-  background-color: var(--secondary-light);
+&.visible {
+opacity: 1;
 }
+ }
 
-
+.scrollBtn:hover:before, .scrollBtn:focus:before {
+   background: radial-gradient(var(--secondary-light), rgba(79, 46, 232, 0.3));
+}
 
 .scroll__icon {
   fill: var(--primary-light);
   z-index: 998;
+  transition: fill var(--time) var(--cubic);
 }
+
+.scrollBtn:hover .scroll__icon, .scrollBtn:focus .scroll__icon {
+  fill: var(--primary-akzent);
+}
+
 
 
  
