--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -13,6 +13,8 @@
 
 @import "./base/shopingListPage/ShoppingList";
 
+@import "./base/main-page/loader";
+
 
 // components
 @import "./components/all-categories";
