--- a/src/sass/base/main-page/_loader.scss
+++ b/src/sass/base/main-page/_loader.scss
@@ -1,7 +1,7 @@
 
 
 $thickness : 5px;
-$duration : 750;
+$duration : 600;
 $delay : calc($duration/6);
 
 @mixin polka($size, $dot, $base, $accent) {
@@ -16,11 +16,19 @@ $delay : calc($duration/6);
 .bookshelf_wrapper {
     position: fixed;
     bottom: 10px;
-    right: 50px;
+    right: 30px;
     width: 50px;
     transform: scale(0.2);
 
+    @media screen and (min-width: 768px) {
+        transform: scale(0.4);
+        right: 60px;
+    }
 
+    @media screen and (min-width: 1440px) {
+        transform: scale(0.6);
+        right: 80px;
+    }
 
 }
 
