--- a/src/partials/common/header.html
+++ b/src/partials/common/header.html
@@ -34,19 +34,8 @@
       <span class="switcher-theme__status"></span>
     </label>
 
-    <div class="page-header__user-container auth-component">
-      <button class="user js-user" type="button">
-        <div class="user__box">
-          <svg
-            class="user__avatar"
-            aria-label="user avatar"
-            width="19"
-            height="19"
-            fill="#4F2EE8"
-          >
-            <use href="./images/icons.svg#icon-user"></use>
-          </svg>
-        </div>
+    <div class="is-logged page-header__user-container auth-component">
+      <button class="user js-user sign-up-btn__page-header" type="button">
 
         <p class="user__name auth-component__user-name">User name</p>
 
@@ -62,12 +51,6 @@
       </div>
     </div>
 
-    <button
-      class="header-btn sign-up-btn sign-up-btn__page-header"
-      type="button"
-    >
-      Sign up
-    </button>
 
     <div class="page-header__btn-container">
       <button
