--- a/src/partials/HomePage/popUp.html
+++ b/src/partials/HomePage/popUp.html
@@ -1,9 +1,11 @@
 <div class="book-modal" data-modal>
   <button type="button" class="modal-close" data-modal-close>
-    <svg class="modal-close-icon" width="32" height="32">
+    <svg class="modal-close-icon" width="18" height="18">
       <use href="/src/images/svg/close-test.svg#icon-close-modal-test"></use>
     </svg>
   </button>
   <div class="book-info"></div>
-  <button type="button" class="button-book-more"></button>
+  <!-- <button type="button" class="button-book-more"></button> -->
 </div>
+
+
