--- a/src/sass/base/main-page/_pop-up.scss
+++ b/src/sass/base/main-page/_pop-up.scss
@@ -7,8 +7,12 @@ height: 100%;
 overflow-y: auto;
 background-color: rgba(17, 17, 17, 0.4);
 opacity: 1;
-pointer-events: none;
-z-index: 9999;
+pointer-events: all;
+z-index: 10;
+
+padding-left: 20px;
+padding-right: 20px;
+transition: opacity ;
 
 }
 
@@ -37,6 +41,7 @@ z-index: 9999;
   border-radius: 18px;
   padding: 40px 24px;
   z-index: 10000;
+    pointer-events: none;
 
         @media screen and (min-width: 768px) {
             top: 50%;
@@ -45,6 +50,12 @@ z-index: 9999;
             min-height: 465px;
           }
 
+}
+
+
+
+.book-modal.active {
+  pointer-events: auto;
 }
 
 .modal-close {
