--- a/src/partials/common/header.html
+++ b/src/partials/common/header.html
@@ -9,7 +9,7 @@
       </svg>
     </a>
 
-    <nav class="page-nav page-header__page-nav">
+    <nav class="page-nav">
       <ul class="page-nav__list list">
         <li>
           <a class="page-nav__link" href="./index.html">Home</a>
@@ -34,8 +34,8 @@
       <span class="switcher-theme__status"></span>
     </label>
 
-    <div class="is-logged page-header__user-container auth-component">
-      <button class="user js-user sign-up-btn__page-header" type="button">
+    <div class="page-header__user-container auth-component">
+      <button class="user js-user sign-up-btn__page-header text-name-user" type="button">
 
         <p class="user__name auth-component__user-name">User name</p>
 
@@ -51,6 +51,15 @@
       </div>
     </div>
 
+    <!-- <button
+      class="header-btn sign-up-btn sign-up-btn__page-header"
+      type="button"
+    >
+      Sign up
+      <svg class="user__icon" width="23" height="26">
+        <use href="./images/icons.svg#icon-triangle-down"></use>
+      </svg>
+    </button> -->
 
     <div class="page-header__btn-container">
       <button
