--- a/src/partials/common/header.html
+++ b/src/partials/common/header.html
@@ -35,12 +35,12 @@
     </label>
 
     <div class="page-header__user-container auth-component">
-      <button class="user js-user sign-up-btn__page-header text-name-user" type="button">
+      <button class="user js-user sign-up-btn__page-header text-name-user header-btn" type="button">
 
-        <p class="user__name auth-component__user-name">User name</p>
+        <p class="user__name auth-component__user-name">Sign Up</p>
 
         <svg class="user__icon" width="23" height="26">
-          <use href="./images/icons.svg#icon-triangle-down"></use>
+          <!-- <use href="./images/icons.svg#icon-triangle-down"></use> -->
         </svg>
       </button>
 
@@ -110,7 +110,7 @@
         </svg>
       </div>
 
-      <p class="user__name">User name</p>
+      <p class="user__name">Sign Up</p>
     </div>
 
     <nav class="page-nav menu-container__page-nav">
