--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -277,13 +277,13 @@ html.dark .switcher-theme__status {
 
 .user__name {
   font-weight: 700;
-  font-size: 22px;
+  font-size: 14px;
   line-height: 1.32;
   letter-spacing: -0.02em;
   color: var(--default-primary-color);
 
   @media screen and (min-width: $tablet) {
-    margin-right: 4px;
+    margin-right: 42px;
   }
 }
 
@@ -434,6 +434,8 @@ html.dark .switcher-theme__status {
   border-radius: 18px;
 
   cursor: pointer;
+  width: 184px;
+    height: 48px;
 
   &::after {
     content: '';
