--- a/src/partials/common/header.html
+++ b/src/partials/common/header.html
@@ -8,7 +8,6 @@
         <use href="./images/icons.svg#icon-text-logo"></use>
       </svg>
     </a>
-
     <nav class="page-nav">
       <ul class="page-nav__list list">
         <li>
@@ -24,43 +23,35 @@
         </li>
       </ul>
     </nav>
-
     <label class="switcher-theme" aria-label="theme switcher">
       <input
         type="checkbox"
         class="switcher-theme__checkbox visually-hidden js-switcher-theme"
       />
-
       <span class="switcher-theme__status"></span>
     </label>
-
     <div class="page-header__user-container auth-component">
-      <button class="user js-user sign-up-btn__page-header text-name-user" type="button">
-
-        <p class="user__name auth-component__user-name">User name</p>
-
+      <button class="user js-user auth-user text-name-user" type="button">
+        User name
         <svg class="user__icon" width="23" height="26">
           <use href="./images/icons.svg#icon-triangle-down"></use>
         </svg>
       </button>
-
       <div class="page-header__btns-box">
         <button class="header-btn log-out-btn user__log-out-btn" type="button">
           Log out
         </button>
       </div>
     </div>
-
-    <!-- <button
+    <button
       class="header-btn sign-up-btn sign-up-btn__page-header"
       type="button"
     >
       Sign up
       <svg class="user__icon" width="23" height="26">
-        <use href="./images/icons.svg#icon-triangle-down"></use>
+        <use href="./images/icons.svg#icon-arrow-right"></use>
       </svg>
-    </button> -->
-
+    </button>
     <div class="page-header__btn-container">
       <button
         class="menu-btn js-open-menu"
@@ -77,7 +68,6 @@
           <use href="./images/icons.svg#icon-align-left"></use>
         </svg>
       </button>
-
       <button
         class="menu-btn menu-btn--close js-close-menu menu-btn--hide"
         type="button"
@@ -94,7 +84,6 @@
     </div>
   </div>
 </header>
-
 <div class="menu-container js-menu-container" id="mobile-menu">
   <div class="container menu-container__container">
     <div class="user">
@@ -109,10 +98,8 @@
           <use href="./images/icons.svg#icon-user"></use>
         </svg>
       </div>
-
       <p class="user__name">User name</p>
     </div>
-
     <nav class="page-nav menu-container__page-nav">
       <ul class="page-nav__list list">
         <li>
@@ -128,14 +115,12 @@
         </li>
       </ul>
     </nav>
-
     <button
       class="header-btn log-out-btn auth-component__sign-out-button"
       type="button"
     >
       Log out
     </button>
-
     <button class="header-btn sign-up-btn js-open-form-modal" type="button">
       Sign up
     </button>
