Revert "Origin/modal"

--- a/src/partials/HomePage/popUp.html
+++ b/src/partials/HomePage/popUp.html
@@ -1,20 +1,7 @@
 <div class="book-modal" data-modal>
-  <button type="button" class="modal-close" data-modal-close>
-    <svg class="modal-close-icon" width="18" height="18">
-      <use href="./images/svg/close-test.svg#icon-close-modal-test"></use>
-    </svg>
-  </button>
+  <button type="button" class="modal-close" data-modal-close>x</button>
   <div class="book-info"></div>
-  <a class="book-info-link" href="#">
   <button type="button" class="button-book-more"></button>
-</a>
-</div>
-
-<p class="greetings hidden2">
-      Сongratulations! You have added the book to the shopping list. To delete,
-      press the button “Remove from the shopping list”.
-    </p>
-  </div>
 </div>
 
 
