--- a/src/partials/common/header.html
+++ b/src/partials/common/header.html
@@ -38,7 +38,7 @@
         </svg>
       </button>
       <div class="page-header__btns-box">
-        <button class="header-btn log-out-btn user__log-out-btn" type="button">
+        <button class="header-btn signout log-out-btn user__log-out-btn" type="button">
           Log out
         </button>
       </div>
