--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,3 +1,5 @@
+// header------------------------------------------
+
 .page-header {
   position: sticky;
   z-index: 10;
@@ -8,7 +10,7 @@
   padding-bottom: 17px;
 
   background-color: var(--primary-light);
-  border: 1.5px solid var(--primary-dark);
+  border: 1.5px solid var(--logo-dark);
   border-radius: 0px 0px 8px 8px;
 }
 
@@ -151,7 +153,7 @@ html.dark .switcher-theme__status {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 3;
 
   padding-top: 104px;
   padding-bottom: 20px;
@@ -274,6 +276,7 @@ html.dark .switcher-theme__status {
 }
 
 .user__name {
+  display: block;
   font-weight: 700;
   font-size: 22px;
   line-height: 1.32;
@@ -286,7 +289,7 @@ html.dark .switcher-theme__status {
 }
 
 .user__icon {
-  fill: var(--primary-dark);
+  fill: var(--default-primary-color);
 
   transform: rotate(0);
   transition: transform var(--time) var(--cubic);
@@ -309,9 +312,9 @@ html.dark .switcher-theme__status {
   }
 }
 
-// .page-header__page-nav {
-//   display: none;
-// }
+.page-header__page-nav {
+  display: none;
+}
 
 .page-nav__list {
   display: flex;
@@ -332,6 +335,7 @@ html.dark .switcher-theme__status {
   align-items: center;
   gap: 4px;
   padding: 8px 16px;
+  position: relative;
 
   font-weight: 500;
   font-size: 14px;
@@ -341,6 +345,24 @@ html.dark .switcher-theme__status {
   text-decoration: none;
   color: var(--default-primary-color);
   border-radius: 36px;
+
+  transition: color var(--time) var(--cubic),
+    background-color var(--time) var(--cubic);
+
+  .page-nav__cart-number {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 2px;
+    right: 10px;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: var(--primary-akzent);
+    font-size: 8px;
+    color: #ffffff;
+  }
 
   @media screen and (min-width: $tablet) {
     color: var(--primary-color);
@@ -356,6 +378,11 @@ html.dark .switcher-theme__status {
       transform: translateX(0);
     }
   }
+
+  &:hover {
+    color: var(--default-primary-color);
+    background-color: var(--primary-akzent);
+  }
 }
 
 .page-nav__icon {
@@ -366,7 +393,7 @@ html.dark .switcher-theme__status {
   @media screen and (min-width: $tablet) {
     position: absolute;
     left: 0;
-    top: 35%;
+    top: 50%;
 
     width: 100%;
     height: 80px;
@@ -380,9 +407,9 @@ html.dark .switcher-theme__status {
   gap: 4px;
   min-width: 118px;
 
-  color: var(--logo-dark);
+  color: var(--default-secondary-color);
 
-  background-color: var(--primary-light);
+  background-color: var(--default-primary-color);
 
   @media screen and (min-width: $tablet) {
     width: 100%;
@@ -402,8 +429,8 @@ html.dark .switcher-theme__status {
 .sign-up-btn {
   display: flex;
   justify-content: space-between;
- min-width: 184px;
-
+  max-width: 184px;
+  width: 100%;
 
   color: var(--default-primary-color);
 
@@ -428,7 +455,7 @@ html.dark .switcher-theme__status {
   line-height: 1.29;
   letter-spacing: -0.04em;
 
-  border: 1.5px solid var(--logo-dark);
+  border: 1.5px solid var(--default-secondary-color);
   border-radius: 18px;
 
   cursor: pointer;
@@ -445,8 +472,6 @@ html.dark .switcher-theme__status {
     background-position: center;
     background-size: cover;
   }
-
-
 }
 
 .is-logged .menu-container__page-nav {
@@ -464,40 +489,25 @@ html.dark .switcher-theme__status {
 }
 
 .is-logged .page-header__user-container {
+  display: none;
+
   @media screen and (min-width: $tablet) {
     display: block;
   }
 }
 
-// .is-logged .sign-up-btn {
-//   display: none;
-// }
+.is-logged .sign-up-btn {
+  display: none;
+}
 
-// .is-logged .sign-up-btn__page-header {
-//   @media screen and (min-width: $tablet) {
-//     display: none;
-//   }
-// }
+.is-logged .sign-up-btn__page-header {
+  @media screen and (min-width: $tablet) {
+    display: none;
+  }
+}
 
 .is-logged .log-out-btn {
   display: inline-flex;
 }
 
-.text-name-user {
-  width: 184px;
-  height: 45px;
-  letter-spacing: -.02em;
-    color: var(--primary-light);
-    font-size: 22px;
-    font-weight: 700;
-    line-height: 1.32;
-}
 
-
-// .page-header__page-nav{
-//   display: none;
-// }
-
-.is-logged .page-nav {
-  display: block;
-}
