--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -9,8 +9,8 @@
   padding-top: 17px;
   padding-bottom: 17px;
 
-  background-color: var(--secondary-bg);
-  border: 1.5px solid var(--primary-color);
+  background-color: var(--primary-light);
+  border: 1.5px solid var(--logo-dark);
   border-radius: 0px 0px 8px 8px;
 }
 
