--- a/src/sass/abstracts/_vars.scss
+++ b/src/sass/abstracts/_vars.scss
@@ -6,6 +6,7 @@
 
 	--secondary-akzent: #eac645;
 	--primary-akzent: #4f2ee8;
+	--cubic-b: cubic-bezier(0.4, 0, 0.2, 1);
 
 	// ---------------------TEXT---------------------
 
