--- a/src/sass/base/main-page/_SupportUkraine.scss
+++ b/src/sass/base/main-page/_SupportUkraine.scss
@@ -162,15 +162,18 @@
    
 
     .support-menu {
-        /* width: 356px; */
+        width: 356px; 
         height: 490px;
     }
 }
 
 
+// shopping list page
 
 
-
-// loader
+.support-menu-shoppinglist{
+    width: 356px;
+    height: 490px;
+}
 
 
