--- a/src/partials/HomePage/popUp.html
+++ b/src/partials/HomePage/popUp.html
@@ -1,8 +1,7 @@
 <div class="book-modal" data-modal>
-  <button type="button" class="modal-close" data-modal-close><svg class="button__close" width="20" height="20">
+  <button type="button" class="modal-close-book-btn" data-modal-close><svg class="button__close" width="20" height="20">
       <use href="/src/images/svg/icons.svg#icon-x-close"></use>
     </svg></button>
   <div class="book-info">
   </div>
-  <!-- <a href="" class="a-test"><img class="img-test" src="./images/shoppinglist/amazon.png" alt=""></a> -->
 </div>
